Fix scoreboard alignment

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -38,10 +38,12 @@
   background-color: #fe9cb5;
   padding: 1.5rem 2rem;
   box-shadow: 0px 0px 10px rgb(138, 138, 138);
+  align-self: center;
 }
 
 #help{
   width: fit-content;
+  align-self: center;
   position: relative;
   font-size: 2rem;
 }
